# CleanStart

./: .git-commit-msg.txt  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: README.md
core/: __init__.py  disk_analyzer.py  startup_analyzer.py
docs/screenshots/: README.md
legacy-pyqt/: README-v0.1.0.md  README.md  main.py
legacy-pyqt/core/: activity_log.py  temp_cleaner.py
legacy-pyqt/gui/: __init__.py  dashboard.py
legacy-pyqt/scripts/: build_windows.ps1
legacy-pyqt/tests/: test_dashboard_smoke.py  test_formatting.py  test_startup_analyzer.py  test_temp_cleaner.py
legacy-pyqt/utils/: __init__.py  crash_log.py  formatting.py  i18n.py
scripts/: build_windows.ps1  screenshot-redesign.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cleanup.rs  disk.rs  error.rs  history.rs  lib.rs  main.rs  settings.rs  startup.rs  util.rs
src/components/: AppShell.tsx  HeroGem.tsx  HeroOrb.tsx  Shell.tsx  ui.tsx
src/data/: mockData.ts
src/lib/: format.ts  ipc.ts  motion.ts  types.ts
src/screens/: ActivityLog.tsx  Dashboard.tsx  DiskAnalyzer.tsx  Settings.tsx  StartupAnalyzer.tsx  TempCleaner.tsx
src/state/: SettingsContext.tsx  ToastContext.tsx
src/types/: app.ts
tests/: test_i18n.py  test_ui_temp_mapping.py
