[package]
name = "cleanstart"
version = "0.2.0"
description = "Safety-first Windows maintenance prototype"
authors = ["CleanStart contributors"]
edition = "2021"

[lib]
name = "cleanstart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
