[package]
name = "cleanstart"
version = "1.0.0"
description = "Safety-first Windows maintenance app"
authors = ["CleanStart contributors"]
edition = "2021"

[lib]
name = "cleanstart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
winreg = "0.55"
